# Refactoring2

./: CMakeLists.txt  README.md
Chapter06/: CMakeLists.txt
Chapter06/10_combine_functions_into_transform/: enrich_reading.cc  enrich_reading1.cc
Chapter06/11_split_phase/: price_order.cc  price_order1.cc
Chapter06/1_extract_function/: print_owing.cc  print_owing1.cc
Chapter06/2_inline_function/: report_lines.cc  report_lines1.cc
Chapter06/3_extract_variable/: price.cc  price1.cc
Chapter06/4_inline_variable/: base_price.cc  base_price1.cc
Chapter06/5_change_function_declaration/: circum.cc  circum1.cc
Chapter06/6_encapsulate_variable/: default_owner.cc  default_owner1.cc
Chapter06/7_rename_variable/: company_name.cc  company_name1.cc
Chapter06/8_introduce_parameter_object/: number_range.cc  number_range1.cc
Chapter06/9_combine_functions_into_class/: reading.cc  reading1.cc
Chapter07/: CMakeLists.txt
Chapter07/1_encapsulate_record/: org.cc  org1.cc
Chapter07/2_encapsulate_collection/: course.cc  course1.cc
Chapter07/3_replace_primitive_with_object/: priority.cc  priority1.cc
Chapter07/4_replace_temp_with_query/: order.cc  order1.cc
Chapter07/5_extract_class/: person.cc  person1.cc
Chapter07/6_inline_class/: shipment.cc  shipment1.cc
Chapter07/7_hide_delegate/: person1.cc
Chapter07/8_remove_middle_man/: person1.cc
Chapter07/9_subsitute_algorithm/: found_person.cc  found_person1.cc
Chapter08/: CMakeLists.txt
Chapter08/1_move_function/: account.cc  account1.cc
Chapter08/2_move_field/: account.cc  account1.cc  customer.cc  customer1.cc
Chapter08/3_move_statements_into_function/: photo.cc  photo1.cc
Chapter08/4_move_statements_to_callers/: render_person.cc  render_person1.cc
Chapter08/5_replace_inline_code_with_function_call/: applies.cc  applies1.cc
Chapter08/6_slide_statements/: slide.cc  slide1.cc
Chapter08/7_split_loop/: loop.cc  loop1.cc
Chapter09/: CMakeLists.txt
Chapter09/1_split_variable/: distance.cc  distance1.cc
Chapter09/2_rename_field/: organization.cc  organization1.cc
Chapter09/3_replace_derived_varible_with_query/: production.cc  production1.cc  production_plan.cc  production_plan1.cc
Chapter09/4_change_reference_to_value/: telephone.cc  telephone1.cc
Chapter09/5_change_value_to_reference/: order.cc  order1.cc
Chapter10/: CMakeLists.txt
Chapter10/1_decompose_conditional/: charge.cc  charge1.cc
Chapter10/2_consolidate_conditional_expression/: amount.cc  amount1.cc
Chapter10/3_replace_nested_conditional_with_guard_clauses/: pay_amount.cc  pay_amount1.cc
Chapter10/4_replace_conditional_with_polymorphism/: bird.cc  bird1.cc  rating.cc  rating1.cc
Chapter10/5_introduce_special_case/: site.cc  site1.cc
Chapter10/6_introduce_assertion/: discount.cc  discount1.cc
Chapter11/: CMakeLists.txt
Chapter11/10_replace_command_with_function/: charge.cc  charge1.cc
Chapter11/1_separate_query_from_modifier/: miscreant.cc  miscreant1.cc
Chapter11/2_parameterize_function/: base_charge.cc  base_charge1.cc
Chapter11/3_remove_flag_argument/: delivery.cc  delivery1.cc
Chapter11/4_preserve_whole_object/: heating_plan.cc  heating_plan1.cc
Chapter11/5_replace_parameter_with_query/: order.cc  order1.cc
Chapter11/6_replace_query_with_parameter/: temperature.cc  temperature1.cc
Chapter11/7_remove_setting_method/: person.cc  person1.cc
Chapter11/8_replace_constructor_with_factory_function/: engineer.cc  engineer1.cc
Chapter11/9_replace_function_with_command/: scorer.cc  scorer1.cc
Chapter12/: CMakeLists.txt
Chapter12/10_replace_subclass_with_delegate/: bird.cc  bird1.cc  booking.cc  booking1.cc
Chapter12/11_replace_superclass_with_delegate/: scroll.cc  scroll1.cc  scroll2.cc
Chapter12/1_pull_up_method/: party.cc  party1.cc
Chapter12/2_pull_up_field/: employee.cc  employee1.cc
Chapter12/3_pull_up_constructor_body/: employee.cc  employee1.cc  party.cc  party1.cc
Chapter12/4_push_down_method/: employee.cc  employee1.cc
Chapter12/5_push_down_field/: employee.cc  employee1.cc
Chapter12/6_replace_type_code_with_subclasses/: employee.cc  employee1.cc  employee2.cc
Chapter12/7_remove_subclass/: person.cc  person1.cc
Chapter12/8_extract_superclass/: department.cc  department1.cc
Chapter12/9_collapse_hierarchy/: employee.cc  employee1.cc
