# 6.1 extract function
add_executable(print_owing 1_extract_function/print_owing.cc)
add_executable(print_owing1 1_extract_function/print_owing1.cc)

# 6.2 inline function
add_executable(report_lines 2_inline_function/report_lines.cc)
add_executable(report_lines1 2_inline_function/report_lines1.cc)

# 6.3 extract variable
add_executable(0603price 3_extract_variable/price.cc)
add_executable(0603price1 3_extract_variable/price1.cc)

# 6.4 inline variable
add_executable(base_price 4_inline_variable/base_price.cc)
add_executable(base_price1 4_inline_variable/base_price1.cc)