# 6.1 extract function
add_executable(print_owing 1_extract_function/print_owing.cc)
add_executable(print_owing1 1_extract_function/print_owing1.cc)

# 6.2 inline function
add_executable(report_lines 2_inline_function/report_lines.cc)
add_executable(report_lines1 2_inline_function/report_lines1.cc)

# 6.3 extract variable
add_executable(0603price 3_extract_variable/price.cc)
add_executable(0603price1 3_extract_variable/price1.cc)

# 6.4 inline variable
add_executable(base_price 4_inline_variable/base_price.cc)
add_executable(base_price1 4_inline_variable/base_price1.cc)

# 6.5 change function declaration
add_executable(circum 5_change_function_declaration/circum.cc)
add_executable(circum1 5_change_function_declaration/circum1.cc)

# 6.6 encapsulate_variable
add_executable(default_owner 6_encapsulate_variable/default_owner.cc)
add_executable(default_owner1 6_encapsulate_variable/default_owner1.cc)

# 6.7 rename variable
add_executable(company_name 7_rename_variable/company_name.cc)
add_executable(company_name1 7_rename_variable/company_name1.cc)

# 6.8 introduce parameter object
add_executable(number_range 8_introduce_parameter_object/number_range.cc)
add_executable(number_range1 8_introduce_parameter_object/number_range1.cc)

# 6.9 combine functions into class
add_executable(reading 9_combine_functions_into_class/reading.cc)
add_executable(reading1 9_combine_functions_into_class/reading1.cc)