# 7.1  encapsulate record
add_executable(org 1_encapsulate_record/org.cc)
add_executable(org1 1_encapsulate_record/org1.cc)

# 7.2 encapsulate collection
add_executable(course 2_encapsulate_collection/course.cc)
add_executable(course1 2_encapsulate_collection/course1.cc)

# 7.4 replace temp with query
add_executable(0704order 4_replace_temp_with_query/order.cc)
add_executable(0704order1 4_replace_temp_with_query/order1.cc)