# 7.1  encapsulate record
add_executable(org 1_encapsulate_record/org.cc)
add_executable(org1 1_encapsulate_record/org1.cc)

# 7.2 encapsulate collection
add_executable(course 2_encapsulate_collection/course.cc)
add_executable(course1 2_encapsulate_collection/course1.cc)

# 7.3 replace primitive with object
add_executable(0703priority 3_replace_primitive_with_object/priority.cc)
add_executable(0703priority1 3_replace_primitive_with_object/priority1.cc)

# 7.4 replace temp with query
add_executable(0704order 4_replace_temp_with_query/order.cc)
add_executable(0704order1 4_replace_temp_with_query/order1.cc)

# 7.5 extract class
add_executable(0705person 5_extract_class/person.cc)
add_executable(0705person1 5_extract_class/person1.cc)

# 7.6 inline class
add_executable(shipment 6_inline_class/shipment.cc)
add_executable(shipment1 6_inline_class/shipment1.cc)

# 7.7 hide delegate
add_executable(0707person 7_hide_delegate/person.cc)
add_executable(0707person1 7_hide_delegate/person1.cc)

# 7.8 remove middle man
add_executable(0708person 8_remove_middle_man/person.cc)
add_executable(0708person1 8_remove_middle_man/person1.cc)