# 8.1 move function
add_executable(801account 1_move_function/account.cc)
add_executable(801account1 1_move_function/account1.cc)

# 8.2 move field
add_executable(802customer 2_move_field/customer.cc)
add_executable(802customer1 2_move_field/customer1.cc)
add_executable(802account 2_move_field/account.cc)
add_executable(802account1 2_move_field/account1.cc)  