# 8.1 move function
add_executable(801account 1_move_function/account.cc)
add_executable(801account1 1_move_function/account1.cc)

# 8.2 move field
add_executable(802customer 2_move_field/customer.cc)
add_executable(802customer1 2_move_field/customer1.cc)
add_executable(802account 2_move_field/account.cc)
add_executable(802account1 2_move_field/account1.cc)  

# 8.3 move statements into function
add_executable(photo 3_move_statements_into_function/photo.cc)
add_executable(photo1 3_move_statements_into_function/photo1.cc)

# 8.4 move statement to callers
add_executable(render_person 4_move_statements_to_callers/render_person.cc)
add_executable(render_person1 4_move_statements_to_callers/render_person1.cc)

# 8.5 replace inline code with function call
add_executable(applies 5_replace_inline_code_with_function_call/applies.cc)
add_executable(applies1 5_replace_inline_code_with_function_call/applies1.cc)

# 8.6 slide statements
add_executable(slide 6_slide_statements/slide.cc)
add_executable(slide1 6_slide_statements/slide1.cc)

# 8.7 split loop
add_executable(loop 7_split_loop/loop.cc)
add_executable(loop1 7_split_loop/loop1.cc)