# 9.1 split variable
add_executable(distance 1_split_variable/distance.cc)
add_executable(distance1 1_split_variable/distance1.cc)

# 9.2 rename field
add_executable(organization 2_rename_field/organization.cc)
add_executable(organization1 2_rename_field/organization1.cc)

# 9.3 replace derived varible with query
add_executable(production 3_replace_derived_varible_with_query/production.cc)
add_executable(production1 3_replace_derived_varible_with_query/production1.cc)
add_executable(production_plan 3_replace_derived_varible_with_query/production_plan.cc)
add_executable(production_plan1 3_replace_derived_varible_with_query/production_plan1.cc)

# 9.4 change reference to value
add_executable(telephone 4_change_reference_to_value/telephone.cc)
add_executable(telephone1 4_change_reference_to_value/telephone1.cc)

# 9.5 change value to reference
add_executable(0905order 5_change_value_to_reference/order.cc)
add_executable(0905order1 5_change_value_to_reference/order1.cc)