# 11.1 separate query from modifier
add_executable(miscreant 1_separate_query_from_modifier/miscreant.cc)
add_executable(miscreant1 1_separate_query_from_modifier/miscreant1.cc)

# 11.2 parameterize function
add_executable(base_charge 2_parameterize_function/base_charge.cc)
add_executable(base_charge1 2_parameterize_function/base_charge1.cc)