# 11.1 separate query from modifier
add_executable(miscreant 1_separate_query_from_modifier/miscreant.cc)
add_executable(miscreant1 1_separate_query_from_modifier/miscreant1.cc)

# 11.2 parameterize function
add_executable(base_charge 2_parameterize_function/base_charge.cc)
add_executable(base_charge1 2_parameterize_function/base_charge1.cc)

# 11.3 remove flag argument
add_executable(delivery 3_remove_flag_argument/delivery.cc)
add_executable(delivery1 3_remove_flag_argument/delivery1.cc)

# 11.4 preserve whole object
add_executable(heating_plan 4_preserve_whole_object/heating_plan.cc)
add_executable(heating_plan1 4_preserve_whole_object/heating_plan1.cc)

# 11.5 replace parameter with query
add_executable(order 5_replace_parameter_with_query/order.cc)
add_executable(order1 5_replace_parameter_with_query/order1.cc)

# 11.6 replace query with parameter
add_executable(temperature 6_replace_query_with_parameter/temperature.cc)
add_executable(temperature1 6_replace_query_with_parameter/temperature1.cc)

# 11.7 remove setting method
add_executable(117_person 7_remove_setting_method/person.cc)
add_executable(117_person1 7_remove_setting_method/person1.cc)