
# 12.1 pull up method
add_executable(party 1_pull_up_method/party.cc)
add_executable(party1 1_pull_up_method/party1.cc)

# 12.2 pull up field
add_executable(employee 2_pull_up_field/employee.cc)
add_executable(employee1 2_pull_up_field/employee1.cc)

# 12.3 pull up constructor body
add_executable(3_party 3_pull_up_constructor_body/party.cc)
add_executable(3_party1 3_pull_up_constructor_body/party1.cc)
add_executable(3_employee 3_pull_up_constructor_body/employee.cc)
add_executable(3_employee1 3_pull_up_constructor_body/employee1.cc)